k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipebook
  namespace: recipebook
  labels:
    app: recipebook
spec:
  type: ClusterIP
  selector:
    app: recipebook
  ports:
    - name: http
      port: 80
      targetPort: http
